# Axium

./: .dockerignore  .env.example  .gitignore  Bruno.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.loadbalanced.yml  docker-compose.yml  generate_ssl_key.bat
.github/workflows/: ci.yml
.sqlx/: query-033e51c7aabc39cca4e950802d3612fde6e95c5f4bc7bc2b7cd2999d1911b7fa.json  query-093ef8f673217d6f2c839df726aa141746caf4e5ed64de30c5db59db7605ac20.json  query-2887e61a6dad039d695a6f757dffa2ebe55412d9e68f13d9eaad2de85b02ea18.json  query-2cf3ce39a384a0e3adc9fc8079e57e244857c19ba3dbbebe5bdefc1a7d69ae0e.json  query-2e465c3f5f3b3fb29f51cefabfab678ae2f60db0bfdbd437fb00618618b0ab5e.json  query-373ee57acc82e12f107320490023c8a42c8d62a06abc6d9514e65a1251e6db5e.json  query-498b48c64297b311ffa3a34ee027236868f165805f4d3f35acfbf66f0c7f91d0.json  query-4c70d4136a90fa3de1657436935b87ee52c4378d06980f1550b02bb6157fb3dd.json  query-716385f5c21997ac3cc0d6c3c05b06b568399a6516217ef423bcb3a6487988c4.json  query-77a3bd5df3cc1e7956f2fd2110ccd8d329aac6b4e07811fed175360835d5b4e3.json  query-7db352de269933f182b8428370b30bc309a8594bcaf70da6654e9621175fd36f.json  query-85aa2f2074192dbff8cb91b7990f92295368b4a197f66558b5a2837f449e21cc.json  query-8dacc248aa43f58bbc157b1d4e78a2cec21aa60669c00689e10530cda8ddc857.json  query-9367a43aca7c0c325fb3f890127a8e73acf598a658a07e6288552c3688174a14.json  query-9abb5a5815bc898509da6e0138feab8d1a9f7ff944fa03c03d618bc2cb2436c2.json  query-bfe67961d2ea262c27e871ad79b3fc38d68656efa70ef6107ce74d76f2bfa60c.json  query-d81a4a1dcb0541991bc174fecdaaf1d56ed4cabf74f5a0d3149baa423ce364c4.json  query-db296994cbe5a9effe21df8cc7df8b304780a8a1b9ff461d00c58dea99850ace.json  query-e1ccc7edb7c709f4fde66b9c3c3eade7aa764d53c6fe7fd2d53d9816de278916.json  query-e519b571e9bc59bc46722063fd6d6f45b66bfc09a974a064019a8ddb1133a96d.json  query-e53700772078f1819fb514563f64153a71b1405917790d89d33f0397507c1c60.json  query-f148d6cd5407b8f4fd3306e16293404331e69dea6a735b81b95e825bf3f9ff16.json  query-f3654562dce962a55cddfaf8522f67cfa234572488f521d7b96106adde48651c.json  query-fabba347000be53d31ff0ae121e826fac8d3e4f4d68e05151f3418623d64e39d.json  query-ff9fc67cbafe419647c5e0d00063530601ccb0b8c8862880c2a2a55ee62af285.json
documentation/: authentication_route_builder.md  installation_docker.md  installation_ubuntu.md  installation_windows.md  integration_solidjs.md  openapi.json
migrations/: 20250128160043_create_roles_table.sql  20250128160044_create_tiers_table.sql  20250128160119_create_users_table.sql  20250128160153_create_apikeys_table.sql  20250128160203_create_usage_table.sql  20250128160204_create_todos_table.sql  20250128160205_extend_users_with_personal_info.sql  20250128160206_create_users_password_reset_codes_table.sql
src/: main.rs
src/cache/: add.rs
src/core/: README.md  config.rs  mod.rs  server.rs  tls.rs
src/core/cache/: connect.rs  delete.rs  mod.rs
src/database/: README.md  apikeys.rs  connect.rs  get_apikeys.rs  get_users.rs  insert_usage.rs  mod.rs  todos.rs  usage.rs  users.rs
src/handlers/: README.md  delete_apikeys.rs  delete_todos.rs  delete_users.rs  get_apikeys.rs  get_health.rs  get_referencedata.rs  get_todos.rs  get_usage.rs  get_users.rs  homepage.rs  login.rs  mod.rs  patch_users.rs  post_apikeys.rs  post_todos.rs  post_users.rs  protected.rs  rotate_apikeys.rs  signin.rs  validate.rs
src/mail/: connect.rs  footer.html  mod.rs  send.rs
src/middlewares/: README.md  auth.rs  mod.rs
src/models/: README.md  apikey.rs  auth.rs  documentation.rs  error.rs  health.rs  mod.rs  role.rs  todo.rs  usage.rs  user.rs
src/referencedata/: countries.rs  languages.rs  mod.rs
src/routes/: README.md  apikey.rs  auth.rs  delete_apikeys.rs  delete_todos.rs  delete_users.rs  get_apikeys.rs  get_health.rs  get_todos.rs  get_usage.rs  get_users.rs  health.rs  homepage.rs  mod.rs  post_apikeys.rs  post_todos.rs  post_users.rs  protected.rs  referencedata.rs  rotate_apikeys.rs  todo.rs  usage.rs  user.rs
src/storage/: connect.rs  delete.rs  mod.rs  presign_url.rs  upload.rs
src/utils/: README.md  auth.rs  global_error_handler.rs  mod.rs  process_image.rs  validate.rs
src/wrappers/: README.md  authentication_route_builder.rs  mod.rs
