[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"
    
[dependencies]
# Web framework and server
axum = { version = "0.8.1", features = ["json"] }
# hyper = { version = "1.5.2", features = ["full"] }

# Database interaction
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Serialization and deserialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# Authentication and security
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# Asynchronous runtime and traits
tokio = { version = "1.43.0", features = ["rt-multi-thread", "process"] }

# Configuration and environment
dotenvy = "0.15.7"

# Middleware and server utilities
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-br"] }

# Logging and monitoring
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# System information
sysinfo = "0.33.1"

# Date and time handling
chrono = "0.4.39"

# SSL / TLS
rustls = "0.23.21"
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
